2006-08-29  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/worker/feed.py:
	  use transport.loseConnection() instead

2006-08-29  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/worker/feed.py:
	* flumotion/worker/worker.py:
	  if we can't hand off the fd to the job because the mind is gone,
	  bubble up a False result, and use it to drop all references to
	  the transport.

2006-08-29  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/feedcomponent010.py:
	  comment on the FIXME

2006-08-29  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/feedcomponent010.py:
	  add an event probe for EOS and swallow it - reconnect will be
	  triggered due to buffer probe.
	  There may be a better way to deal with this though.

2006-08-29  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/feedcomponent010.py:
	  further fix feed reconnection for stopped upstream components:
	  - handle fdsrc EOS in bus handler by reconnecting
	  - in _checkEater(), try to reconnect even if the lastTime was
	    set to 0
	  - in eaterDisconnected(), reset lastTime to 0 to make sure
	    our checkEater() doesn't spuriously mark the feed as connected
	    again just because we received data right before the disconnect

2006-08-29  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/feedcomponent010.py:
	  implement feed reconnection for eaters:
	  - make checks for receiving data per-eater instead of global
	  - rename to _checkEater, and keep track of callLater state
	    so we can use this method both as a callLater and a normal method
	  - add overridable vmethods eaterDisconnected and eaterConnected,
	    which by default set to hungry if any eater is disconnected,
	    and happy otherwise.  Subclasses can override this behaviour here.
	  - _checkEater will also re-attempt connection if the previous