@@ -1,3 +1,8 @@
+2006-08-30  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
+
+	* flumotion/manager/manager.py:
+	Clear avatar flags after component has stopped.
+
 2006-08-29  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* flumotion/worker/feed.py:
